--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
         </header>
 
         <section>
-            <h1>HUB Projetos</h1>
+            <h1>HUB Projetos - <a href="https://github.com/FerreiiraSD/Diego.Ferreira/tree/main/conteudo" target="_blank">Repositório Github</a></h1> 
 
             <div id="container">
 
                 <figure id="local">
-                    <a href="conteudo/Exercicio 1/index.html"><img src="img/atividade 1.png"></a>
+                    <a href="conteudo/Exercicio 1/index.html"><img src="img/atividade 1.png" target="_blank"></a>
                 </figure>
                 
                 <figure id="local">
-                    <a href="conteudo/Exercicio 2/index.html"><img src="img/atividade 2.png"></a>
+                    <a href="conteudo/Exercicio 2/index.html"><img src="img/atividade 2.png" target="_blank"></a>
                 </figure>
 
             </div>
@@ -37,11 +37,11 @@
             <div id="container">
 
                 <figure id="local">
-                    <a href="conteudo/Exercicio 3/index.html"><img src="img/atividade 3.png"></a>
+                    <a href="conteudo/Exercicio 3/index.html"><img src="img/atividade 3.png" target="_blank"></a>
                 </figure>
                 
                 <figure id="local">
-                    <a href="conteudo/exercicio 4/index.html"><img src="img/atividade 4.png"></a>
+                    <a href="conteudo/exercicio 4/index.html"><img src="img/atividade 4.png" target="_blank"></a>
                 </figure>
 
             </div>
@@ -49,11 +49,11 @@
             <div id="container">
 
                 <figure id="local">
-                    <a href="conteudo/Avaliação Semestral/index.html"><img src="img/Games.png"></a>
+                    <a href="conteudo/Avaliação Semestral/index.html"><img src="img/Games.png" target="_blank"></a>
                 </figure>
 
                 <figure id="local">
-                    <a href="conteudo/Trabalho Semestral/index.html"><img src="img/dfs logo.png"></a>
+                    <a href="conteudo/Trabalho Semestral/index.html"><img src="img/dfs logo.png" target="_blank"></a>
                 </figure>
 
             </div>
