--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
             <div id="container">
 
                 <figure id="local">
-                    <a href="conteudo/Exercicio 1/index.html"><img src="img/atividade 1.png" target="_blank"></a>
+                    <a href="conteudo/Exercicio 1/index.html" target="_blank"><img src="img/atividade 1.png"></a>
                 </figure>
                 
                 <figure id="local">
-                    <a href="conteudo/Exercicio 2/index.html"><img src="img/atividade 2.png" target="_blank"></a>
+                    <a href="conteudo/Exercicio 2/index.html" target="_blank"><img src="img/atividade 2.png"></a>
                 </figure>
 
             </div>
@@ -37,11 +37,11 @@
             <div id="container">
 
                 <figure id="local">
-                    <a href="conteudo/Exercicio 3/index.html"><img src="img/atividade 3.png" target="_blank"></a>
+                    <a href="conteudo/Exercicio 3/index.html" target="_blank"><img src="img/atividade 3.png"></a>
                 </figure>
                 
                 <figure id="local">
-                    <a href="conteudo/exercicio 4/index.html"><img src="img/atividade 4.png" target="_blank"></a>
+                    <a href="conteudo/exercicio 4/index.html" target="_blank"><img src="img/atividade 4.png"></a>
                 </figure>
 
             </div>
@@ -49,11 +49,11 @@
             <div id="container">
 
                 <figure id="local">
-                    <a href="conteudo/Avaliação Semestral/index.html"><img src="img/Games.png" target="_blank"></a>
+                    <a href="conteudo/Avaliação Semestral/index.html" target="_blank"><img src="img/Games.png"></a>
                 </figure>
 
                 <figure id="local">
-                    <a href="conteudo/Trabalho Semestral/index.html"><img src="img/dfs logo.png" target="_blank"></a>
+                    <a href="conteudo/Trabalho Semestral/index.html" target="_blank"><img src="img/dfs logo.png"></a>
                 </figure>
 
             </div>
